make TT_test1 works and leaves no trace after make clean

--- a/TaskTransfer.org
+++ b/TaskTransfer.org
@@ -938,6 +938,7 @@ test/TT_CT02.mat:TaskTransfer.org
 
 test/TT_expectedOutT0.mat:TaskTransfer.org
 	$(call tangle,"TaskTransfer.org")
+
 #+end_src
 Cleaning :
 #+srcname: TT_Test0_clean_make
@@ -1004,7 +1005,7 @@ TT_Test0_clean:
     The constraint matrices relative each expert are computed :
     #+srcname: TT_Test1_make
     #+begin_src makefile
-TT_test1: Constraint.py test/TT_PPi1.mat test/TT_PPi2.mat test/TT_PEast.mat test/TT_PWest.mat test/TT_PSouth.mat test/TT_PNorth.mat TaskTransfer.py TT_expectedOutT1.mat
+TT_test1: Constraint.py test/TT_PPi1.mat test/TT_PPi2.mat test/TT_PEast.mat test/TT_PWest.mat test/TT_PSouth.mat test/TT_PNorth.mat TaskTransfer.py test/TT_expectedOutT1.mat a2str.py
 	python Constraint.py test/TT_PPi1.mat test/TT_PEast.mat test/TT_PWest.mat test/TT_PSouth.mat test/TT_PNorth.mat > test/TT_C1.mat
 	python Constraint.py test/TT_PPi2.mat test/TT_PEast.mat test/TT_PWest.mat test/TT_PSouth.mat test/TT_PNorth.mat > test/TT_C2.mat
     #+end_src
