--- a/InvertedPendulum/plot.org
+++ b/InvertedPendulum/plot.org
@@ -288,11 +288,18 @@ conf.py: LSTDmu_Exp.org
 
 ../LSPI.h:
 	make -C .. LSPI.h
+
+../RL_Globals.h:
+	make -C .. RL_Globals.h
+
+../IRL_Globals.h:
+	make -C .. IRL_Globals.h
+
 #+end_src
 ** C source to .o files
 #+srcname: LSTDmu_Exp_c2o_make
 #+begin_src makefile
-plot.o: plot.c InvertedPendulum.h ../utils.h ../LSPI.h ../greedy.h simulator.h ../abbeel2004apprenticeship.h ../LSTDmu.h
+plot.o: plot.c InvertedPendulum.h ../utils.h ../LSPI.h ../greedy.h simulator.h ../abbeel2004apprenticeship.h ../LSTDmu.h ../criteria.h ../RL_Globals.h ../IRL_Globals.h
 	$(call c2obj,"plot.c")
 #+end_src
 ** .o to .exe
