make LAFEM_Exp1 now works and leaves no trace after make clean

--- a/DP_mu.org
+++ b/DP_mu.org
@@ -59,5 +59,6 @@ DP_mu.py: DP_mu.org
 
 DP_mu_clean:
 	find . -maxdepth 1 -iname "DP_mu.py"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "DP_mu.pyc"   | xargs $(XARGS_OPT) rm
   #+end_src
 
