--- a/GridWorld/LAFEM_Exp1.org
+++ b/GridWorld/LAFEM_Exp1.org
@@ -22,6 +22,8 @@
       On utilise le code fourni [[id:879A40A3-5890-4665-86C0-826ABD3BC1BC][ici]].
       On importe ce qu'il importe d'importer
     #+begin_src python :tangle LAFEM_Exp1.py
+import sys
+sys.path+=['..']
 from a2str import *
 from LAFEM import *
 from DP_mu import *
@@ -74,7 +76,7 @@ class LAFEM_Exp1( LAFEM ):
       #+end_src
     On calcule les matrices de /feature expectation/
       #+begin_src python :tangle LAFEM_Exp1.py
-        self.Mu_E = NA_DP_mu( self.Pi_E, identity(25) )
+        self.Mu_E = DP_mu( self.Pi_E, identity(25) )
         self.Mu_north = identity(25) + 0.9*dot(self.P_north,self.Mu_E)
         self.Mu_west = identity(25) + 0.9*dot(self.P_west,self.Mu_E)
         self.Mu_east = identity(25) + 0.9*dot(self.P_east,self.Mu_E)
@@ -127,6 +129,8 @@ class LAFEM_Exp1( LAFEM ):
 *** Affichage de la politique
      On crée une fonction permettant un joli affichage de la politique, pour comparer celle de l'expert et celle de l'agent, ainsi qu'une fonction changeant le format de la politique, nécessaire pour notre implémentation : d'une matrice de probabilités de transition, elle devient un dictionnaire qui à une chaîne représentant un état associe un mot réprésentant une action. 
       #+begin_src python :tangle Pi2txt.py
+import sys
+sys.path+=['..']
 from numpy import *
 import scipy
 from a2str import *
@@ -190,7 +194,7 @@ omega_lafem = lafem.run()
      
      Entrainer un agent sur le problème du gridworld, avec la récompense trouvée par LAFEM : définir $\pi : S\rightarrow A$ :
      #+begin_src python :tangle LAFEM_Exp1.py
-Pi = TT_DP_txt( omega_lafem, (lafem.P_north, lafem.P_south, lafem.P_west, lafem.P_east), "V_agent.mat" )
+Pi = DP_txt( omega_lafem, (lafem.P_north, lafem.P_south, lafem.P_west, lafem.P_east), "V_agent.mat" )
      #+end_src
 *** Sauver les données pour les résultats
      Comparer $E[\omega^T\mu_E(s)| s\in S]$ et $E[\omega^T\mu_\pi(s)| s\in S]$ :
@@ -205,7 +209,7 @@ for s in lafem.S():
     cnt = cnt + 1
 perf_expert = perf_expert/cnt
 
-Mu_pi = NA_DP_mu( Pi, identity(25) )
+Mu_pi = DP_mu( Pi, identity(25) )
 perf_agent = 0
 cnt = 0
 for s in lafem.S():
@@ -259,7 +263,7 @@ f.close()
 
      Sauver les données pour l'affichage des récompenses :
      #+begin_src python :tangle LAFEM_Exp1.py
-f = open( "True_reward.txt", "w" )
+f = open( "true_reward.txt", "w" )
 for y in range(0,5):
     for x in range(0,5):
         index = x+5*y
@@ -279,14 +283,43 @@ f.close()
 ** Plot code
    Il faut maintenant créer des pdf à partir des données générées lors de l'expérience, pour faire de jolies figures pour un éventuel papier.
 *** Tracé des fonctions de valeurs
-      Le fichier .gp qui va bien :
+      Les fichiers .gp qui vont bien :
 #+begin_src gnuplot :tangle LAFEM_Exp1_V_expert.gp
 set pm3d
 set output "V_expert.ps"
 set term postscript enhanced color
-splot V_expert.txt
+set view 61,254
+splot "V_expert.txt"
 #+end_src
-      
+
+#+begin_src gnuplot :tangle LAFEM_Exp1_V_agent.gp
+set pm3d
+set output "V_agent.ps"
+set term postscript enhanced color
+set view 61,254
+splot "V_agent.txt"
+#+end_src
+
+*** Tracé des récompenses
+
+*** Tracé des fonctions de valeurs
+      Les fichiers .gp qui vont bien :
+#+begin_src gnuplot :tangle LAFEM_Exp1_true_reward.gp
+set pm3d
+set output "true_reward.ps"
+set term postscript enhanced color
+set view 61,254
+splot "true_reward.txt"
+#+end_src
+
+#+begin_src gnuplot :tangle LAFEM_Exp1_retrieved_reward.gp
+set pm3d
+set output "retrieved_reward.ps"
+set term postscript enhanced color
+set view 61,254
+splot "retrieved_reward.txt"
+#+end_src
+
 ** Makefile Rules
 *** Tangling
   #+srcname: LAFEM_Exp1_code_make
@@ -310,13 +343,16 @@ LAFEM_Exp1_V_expert.gp: LAFEM_Exp1.org
 ../DP.py:
 	make -C .. DP.py
 
+../LAFEM.py:
+	make -C .. LAFEM.py
+
 #+end_src
 
 *** Experiment targets
     L'expérience produit quelques figures, et affiche des infos sur la sortie standard.
 #+srcname: LAFEM_Exp1_make
 #+begin_src makefile
-LAFEM_Exp1_run: LAFEM_Exp1.py ../DP_mu.py ../DP.py Pi2txt.py
+LAFEM_Exp1_run: LAFEM_Exp1.py ../DP_mu.py ../DP.py Pi2txt.py ../a2str.py ../LAFEM.py TT_5x5_expertPGen.py
 	python LAFEM_Exp1.py
 
 #+end_src
@@ -328,7 +364,26 @@ V_expert.pdf: LAFEM_Exp1_V_expert.gp V_expert.txt
 	ps2pdf V_expert.ps
 	rm V_expert.ps
 
+V_agent.pdf: LAFEM_Exp1_V_agent.gp V_agent.txt
+	gnuplot LAFEM_Exp1_V_agent.gp
+	ps2pdf V_agent.ps
+	rm V_agent.ps
+
+true_reward.pdf: LAFEM_Exp1_true_reward.gp true_reward.txt
+	gnuplot LAFEM_Exp1_true_reward.gp
+	ps2pdf true_reward.ps
+	rm true_reward.ps
+
+retrieved_reward.pdf: LAFEM_Exp1_retrieved_reward.gp retrieved_reward.txt
+	gnuplot LAFEM_Exp1_retrieved_reward.gp
+	ps2pdf retrieved_reward.ps
+	rm retrieved_reward.ps
+
+
 V_expert.txt: LAFEM_Exp1_run
+V_agent.txt: LAFEM_Exp1_run
+true_reward.txt: LAFEM_Exp1_run
+retrieved_reward.txt: LAFEM_Exp1_run
 #+end_src
     
 *** Cleaning
@@ -338,9 +393,21 @@ V_expert.txt: LAFEM_Exp1_run
 LAFEM_Exp1_clean:
 	find . -maxdepth 1 -iname "LAFEM_Exp1.py"   | xargs $(XARGS_OPT) rm
 	find . -maxdepth 1 -iname "Pi2txt.py"   | xargs $(XARGS_OPT) rm 
+	find . -maxdepth 1 -iname "Pi2txt.pyc"   | xargs $(XARGS_OPT) rm 
 	find . -maxdepth 1 -iname "LAFEM_Exp1_V_expert.gp"   | xargs $(XARGS_OPT) rm
 	find . -maxdepth 1 -iname "V_expert.pdf"   | xargs $(XARGS_OPT) rm
 	find . -maxdepth 1 -iname "V_expert.txt"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "V_expert.mat"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "LAFEM_Exp1_V_agent.gp"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "V_agent.pdf"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "V_agent.txt"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "V_agent.mat"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "LAFEM_Exp1_true_reward.gp"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "true_reward.pdf"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "true_reward.txt"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "LAFEM_Exp1_retrieved_reward.gp"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "retrieved_reward.pdf"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "retrieved_reward.txt"   | xargs $(XARGS_OPT) rm
   #+end_src
 
 * Résultats
