LAFEM works on the InvertedPendulum with a MoteCarlo estimation of \mu
Some FIXME tags are still present.
Teh target name is LAFEM_Exp2 in the main dir.

--- a/IRL_Globals.org
+++ b/IRL_Globals.org
@@ -11,9 +11,10 @@ extern double g_dEpsilon_anirl;
     #+begin_src c :tangle IRL_Globals.h :main no
 extern unsigned int g_iIt_max_anirl;
     #+end_src
-  - Discount factor for ANIRL
+  - Discount factor for ANIRL,LAFEM
     #+begin_src c :tangle IRL_Globals.h :main no
 extern double g_dGamma_anirl;
+extern double g_dGamma_lafem;
     #+end_src
   - Dimension of the \psi generated feature space
     #+begin_src c :tangle IRL_Globals.h :main no
